--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ dill==0.2.8.2
 six==1.11.0
 unicodecsv==0.14.1
 exchangelib==1.11.4
-bleach==2.1
+bleach>=2.1.3
 html5lib==1.0b10  # Until https://github.com/mozilla/bleach/issues/337 is fixed, can be removed afterwards
 kitchen==1.2.4
 simplejson==3.10.0
