--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ six==1.11.0
 unicodecsv==0.14.1
 exchangelib==1.11.4
 bleach>=2.1.3
-html5lib==1.0b10  # Until https://github.com/mozilla/bleach/issues/337 is fixed, can be removed afterwards
+html5lib>=1.0.1
 kitchen==1.2.4
 simplejson==3.10.0
 npyscreen==4.10.5
